# cel-cpp

./: BUILD.bazel  bench.md  demo.md
tools/: BUILD  cel_c_api.cc  cel_c_api.h  macos_clang.sh  macos_clangxx.sh  test.c  test.lua  test_cel_lua_atc.lua
