load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")

package(default_visibility = ["//visibility:public"])

cc_library(
	name = "cel_cpp",
	deps = [
		"//checker:checker_options",
		"//checker:optional",
		"//checker:standard_library",
		"//checker:type_check_issue",
		"//checker:type_checker",
		"//checker:type_checker_builder",
		"//checker:type_checker_builder_factory",
		"//checker:type_checker_subset_factory",
		"//checker:validation_result",
		"//compiler:compiler",
		"//compiler:compiler_factory",
		"//compiler:compiler_library_subset_factory",
		"//compiler:optional",
		"//compiler:standard_library",
		"//env:config",
		"//env:env",
		"//env:env_runtime",
		"//env:env_std_extensions",
		"//env:env_yaml",
		"//env:runtime_std_extensions",
		"//parser:macro",
		"//parser:macro_expr_factory",
		"//parser:macro_registry",
		"//parser:options",
		"//parser:parser",
		"//parser:parser_interface",
		"//parser:parser_subset_factory",
		"//parser:source_factory",
		"//parser:standard_macros",
		"//runtime:activation",
		"//runtime:activation_interface",
		"//runtime:constant_folding",
		"//runtime:embedder_context",
		"//runtime:function",
		"//runtime:function_adapter",
		"//runtime:function_overload_reference",
		"//runtime:function_provider",
		"//runtime:function_registry",
		"//runtime:optional_types",
		"//runtime:reference_resolver",
		"//runtime:regex_precompilation",
		"//runtime:register_function_helper",
		"//runtime:runtime",
		"//runtime:runtime_builder",
		"//runtime:runtime_builder_factory",
		"//runtime:runtime_issue",
		"//runtime:runtime_options",
		"//runtime:standard_functions",
		"//runtime:standard_runtime_builder_factory",
		"//runtime:type_registry",
	],
)

cc_shared_library(
	name = "cel_cpp_shared",
	deps = [":cel_cpp"],
	shared_lib_name = "libcel_cpp.dylib",
)
